# Liga

./: .gitignore  README.md
src/: ASTNode.hpp  ASTValues.hpp  CMakeLists.txt  Enviroment.hpp  Function.cpp  Function.hpp  GenericType.hpp  GenericValue.hpp  LLVM.hpp  LLVMUtils.cpp  LLVMUtils.hpp  Malloc.hpp  Parser.hpp  RefrenceCounter.cpp  RefrenceCounter.hpp  Runtime.hpp  StandardFunctions.hpp  Types.hpp  main.cpp  main.liga
src/AST/: Boolean.cpp  Boolean.hpp  Char.cpp  Char.hpp  Float.cpp  Float.hpp  Integer.cpp  Integer.hpp  Process.cpp  Process.hpp  Symbol.cpp  Symbol.hpp  Tuple.cpp  Tuple.hpp  Vector.cpp  Vector.hpp
src/Types/: Boolean.cpp  Boolean.hpp  Char.cpp  Char.hpp  Float.cpp  Float.hpp  Integer.cpp  Integer.hpp  Tuple.cpp  Tuple.hpp  Vector.cpp  Vector.hpp  Void.cpp  Void.hpp
